Temp correlation function update

--- a/pools_specific_EDA/Pool 8/Pool 8 Kmapper.ipynb
+++ b/pools_specific_EDA/Pool 8/Pool 8 Kmapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "extensive-startup",
+   "id": "democratic-passenger",
    "metadata": {},
    "source": [
     "### Imports"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "third-greenhouse",
+   "execution_count": 6,
+   "id": "concrete-coffee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "objective-tactics",
+   "id": "sporting-proxy",
    "metadata": {},
    "source": [
     "### Functions"
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "heavy-civilization",
+   "execution_count": 7,
+   "id": "plain-lounge",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
     "    return list(colorvals)\n",
     "\n",
     "\n",
-    "def output_density_graph(scomplex,X_scaled,title = \"random_title\"+str(int(100*round(np.random.rand(),3))),verbosity = 0):\n",
+    "def output_density_graph(scomplex,X_scaled,title = \"random_title\"+str(int(100*round(np.random.rand(),3))),verbosity = 0, save = True):\n",
     "    '''\n",
     "    Does the work for outputting the number of states and directed graph\n",
     "    '''\n",
@@ -660,8 +660,9 @@
     "    scomplex['maxima'] = get_local_maxima(scomplex['graph'])\n",
     "    print(\"Maximum: \", scomplex['maxima'])\n",
     "    print(\"Number of states: \",len(scomplex['maxima']))\n",
-    "    filepath = r\"Mapper outputs\\Directed Graphs\" + \"\\\\\" +title+\".png\"\n",
-    "    draw_graph(scomplex,filepath,with_labels=False)\n",
+    "    if save:\n",
+    "        filepath = r\"Mapper outputs\\Directed Graphs\" + \"\\\\\" +title+\".png\"\n",
+    "        draw_graph(scomplex,filepath,with_labels=False)\n",
     "    \n",
     "    return scomplex\n",
     "\n",
@@ -670,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "northern-circuit",
+   "id": "regional-question",
    "metadata": {},
    "source": [
     "### Load data"
@@ -678,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "third-imaging",
+   "id": "federal-composition",
    "metadata": {},
    "source": [
     "Run this cell to use Ambers Random Forrest interpolated dataset"
@@ -686,8 +687,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "hundred-differential",
+   "execution_count": 8,
+   "id": "defined-viewer",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +710,7 @@
        "(13948, 21)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +737,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "placed-cursor",
+   "id": "unique-incident",
    "metadata": {},
    "source": [
     "### Check explained variance ratio to determine n_cubes ratio on pca"
@@ -745,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "independent-boards",
+   "id": "starting-safety",
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forbidden-world",
+   "id": "miniature-sampling",
    "metadata": {},
    "source": [
     "### Test parameters largest node and data retention"
@@ -782,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "preliminary-sleep",
+   "id": "wrong-synthesis",
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fallen-component",
+   "id": "personalized-saskatchewan",
    "metadata": {},
    "source": [
     "### No parameter choices worked because of largest node, trying more bins"
@@ -944,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "continental-performer",
+   "id": "regulation-drill",
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wired-wagon",
+   "id": "instant-street",
    "metadata": {},
    "source": [
     "### The chosen parameters for pool 8 are perc_overlap = 0.25 and n_cubes = [270,131]. It displays a representative shape and the largest node contains 9.56% of the data and 94.11% of the data is retained."
@@ -1113,7 +1114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "induced-comparison",
+   "id": "opposed-spine",
    "metadata": {},
    "source": [
     "Save the output of pool 8 with thes parameters in a tuple, then pickle it"
@@ -1122,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "hundred-wyoming",
+   "id": "incomplete-wisconsin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyrighted-deviation",
+   "id": "animated-sculpture",
    "metadata": {},
    "source": [
     "### Load output of selected parameters"
@@ -1150,8 +1151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "administrative-sauce",
+   "execution_count": 4,
+   "id": "collect-catholic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pharmaceutical-hayes",
+   "id": "cooperative-pharmacology",
    "metadata": {},
    "source": [
     "### Get directed graph and number of states"
@@ -1172,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "polyphonic-stability",
+   "id": "preliminary-summary",
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "seeing-porcelain",
+   "id": "ceramic-applicant",
    "metadata": {},
    "source": [
     "Count the number of points in each state"
@@ -1210,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "manual-hindu",
+   "id": "familiar-belarus",
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fuzzy-adventure",
+   "id": "missing-function",
    "metadata": {},
    "source": [
     "### Boxplot comparison for each variable"
@@ -1239,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "physical-neighbor",
+   "id": "binding-defendant",
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "contrary-arcade",
+   "id": "alleged-aquatic",
    "metadata": {},
    "outputs": [],
    "source": []
