changed relative file path for access to data

--- a/Clean TDA analysis scripts/LTRM simplicial complex.ipynb
+++ b/Clean TDA analysis scripts/LTRM simplicial complex.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
    "outputs": [],
    "source": [
     "# Use this to run the analysis from scratch\n",
-    "water20 = pd.read_csv(\"../../UMR-TDA-2021/LTRM data/RF interpolation/water_full.csv\")\n",
+    "water20 = pd.read_csv(\"../LTRM data/RF interpolation/water_full.csv\")\n",
     "water20 = water20[[\"SHEETBAR\", \"DATE\", \"LATITUDE\",\"LONGITUDE\",\"FLDNUM\", \"STRATUM\",\"LOCATCD\",\n",
     "                   \"WDP\",\"TEMP\", \"DO\", \"VEL\", \"TP\", \"TN\", \"SS\", \"CHLcal\",\"TURB\",\"SECCHI\", \n",
     "                   \"YEAR\", \"SEASON\"]]"
@@ -307,7 +307,7 @@
     "epsilon = 1.5\n",
     "pca_components = 2\n",
     "cube_size = [208,175]\n",
-    "percent_overlap = [.5, .5]\n"
+    "percent_overlap = [.5, .5]"
    ]
   },
   {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
      "output_type": "stream",
      "text": [
       "Primary variable:  SS\n",
-      "Corresponding component:  0.8678368395996763\n",
+      "Corresponding component:  0.8678368395996765\n",
       "Explained Variance:  [0.42729425 0.19537638]\n"
      ]
     }
@@ -357,18 +357,6 @@
     "mapper = km.KeplerMapper(verbose = 0)\n",
     "scomplex = mapper.map(lens, X[continuous_variables], cover = km.Cover(n_cubes = cube_size, perc_overlap = percent_overlap), \n",
     "                                            clusterer = cluster_alg, remove_duplicate_nodes = True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save scomplex and dataframe in pickle files\n",
-    "# Rename files accordingly\n",
-    "scomplex = pk.load(open('../LTRM data 2/LTRM_(273,125).p', \"rb\"))\n",
-    "X = pk.load(open('../LTRM data 2/LTRM_df_(273,125).p', \"rb\"))"
    ]
   },
   {
