cleaning up code

--- a/Clean TDA analysis scripts/LTRM variable analysis.ipynb
+++ b/Clean TDA analysis scripts/LTRM variable analysis.ipynb
@@ -158,8 +158,7 @@
     "state2 = X[X['State 2'] == 1] \n",
     "state3 = X[X['State 3'] == 1] \n",
     "state4 = X[X['State 4'] == 1]\n",
-    "state5 = X[X['State 5'] == 1]\n",
-    "state6 = X[X['State 6'] == 1]"
+    "state5 = X[X['State 5'] == 1]\n"
    ]
   },
   {
@@ -189,8 +188,7 @@
     }
    ],
    "source": [
-    "states = [state1, state2, state3, state4, state5, state6]#, state6, state7, state8, state9,\n",
-    "          #state10], state11, state12, state13, state14, state15, state16, state17, state18] # adjust for the number of states\n",
+    "states = [state1, state2, state3, state4, state5]\n",
     "\n",
     "state_count = 1\n",
     "\n",
