fixed file path names

--- a/Clean TDA analysis scripts/LTRM simplicial complex.ipynb
+++ b/Clean TDA analysis scripts/LTRM simplicial complex.ipynb
@@ -845,12 +845,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle = pk.dump(scomplex, open(\"LTRM_(273, 125).p\", \"wb\"))\n",
-    "pickle = pk.dump(X, open(\"LTRM_df_(273, 125).p\", \"wb\"))"
+    "pickle = pk.dump(scomplex, open(\"LTRM_(273,125).p\", \"wb\"))\n",
+    "pickle = pk.dump(X, open(\"LTRM_df_(273,125).p\", \"wb\"))"
    ]
   },
   {
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
