fixed transition nodes

--- a/Clean TDA analysis scripts/LTRM visualizations.ipynb
+++ b/Clean TDA analysis scripts/LTRM visualizations.ipynb
@@ -32976,6 +32976,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bee43a26",
+   "metadata": {},
+   "source": [
+    "transition nodes:\n",
+    "\n",
+    "* cube98_cluster0 is a transition.\n",
+    "* cube79_cluster0 is a transition.\n",
+    "* cube35_cluster0 is a transition.\n",
+    "* cube21_cluster0 is a transition.\n",
+    "* cube57_cluster0 is a transition.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "10b87053",
@@ -32994,8 +33008,7 @@
    "source": [
     "# create a state color column  -> just lower case 's'\n",
     "water_df['state'] = water_df['State']\n",
-    "temp = [1, 3.5, 2]\n",
-    "water_df.loc[water_df['Transition'] == 1, 'state'] = random.choice(temp)"
+    "water_df.loc[water_df['Transition'] == 1, 'state'] = -1 "
    ]
   },
   {
