cleaned up commets

--- a/Clean TDA analysis scripts/LTRM visualizations.ipynb
+++ b/Clean TDA analysis scripts/LTRM visualizations.ipynb
@@ -32982,11 +32982,11 @@
    "source": [
     "transition nodes:\n",
     "\n",
-    "* cube98_cluster0 is a transition.\n",
-    "* cube79_cluster0 is a transition.\n",
-    "* cube35_cluster0 is a transition.\n",
-    "* cube21_cluster0 is a transition.\n",
-    "* cube57_cluster0 is a transition.\n"
+    "* cube98_cluster0\n",
+    "* cube79_cluster0\n",
+    "* cube35_cluster0\n",
+    "* cube21_cluster0\n",
+    "* cube57_cluster0\n"
    ]
   },
   {
